<resources>

    <string name="app_name">Star Wars</string>
    <string name="empty_generic_text">NO DATA</string>

    <!-- CATEGORY -->
    <string name="category_title">Category</string>

    <!-- MOVIE DETAIL -->
    <string name="movies_director">Director:</string>
    <string name="movies_producer">Producer:</string>
    <string name="movies_release_date">Release Date:</string>
    <string name="movies_opening_crawl">Opening Crawl</string>

    <!-- PLANETS DETAIL -->
    <string name="planet_name">Name</string>
    <string name="planet_rotation_period">Rotation Period</string>
    <string name="planet_orbital_period">Orbital Period</string>
    <string name="planet_diameter">Diameter</string>
    <string name="planet_climate">Climate</string>
    <string name="planet_gravity">Gravity</string>
    <string name="planet_region">Region</string>
    <string name="planet_surface_water">Surface Water</string>
    <string name="planet_population">Population</string>

    <!-- CHARACTER DETAIL -->
    <string name="character_height">Height:</string>
    <string name="character_mass">Mass:</string>
    <string name="character_hair_color">Hair Color:</string>
    <string name="character_skin_color">Skin Color:</string>
    <string name="character_eye_color">Eye Color:</string>
    <string name="character_birth_year">Birth Year:</string>
    <string name="character_gender">Gender:</string>
    <string name="character_name">Name:</string>
    <string name="error">Error</string>

</resources>
