<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_medium">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/planet"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_medium"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_name"
                    android:textAppearance="@style/TextStyle.14.Black.Bold"
                    android:padding="@dimen/space_small"/>

                <TextView
                    android:id="@+id/planetTextViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextStyle.14.Black54"
                    android:padding="@dimen/space_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_rotation_period"
                    android:textAppearance="@style/TextStyle.14.Black.Bold"
                    android:padding="@dimen/space_small"/>

                <TextView
                    android:id="@+id/planetTextViewRotationPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextStyle.14.Black54"
                    android:padding="@dimen/space_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_orbital_period"
                    android:textAppearance="@style/TextStyle.14.Black.Bold"
                    android:padding="@dimen/space_small"/>

                <TextView
                    android:id="@+id/planetTextViewOrbitalPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextStyle.14.Black54"
                    android:padding="@dimen/space_small"/>

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_medium"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_diameter"
                android:textAppearance="@style/TextStyle.14.Black.Bold"
                android:padding="@dimen/space_small"/>

            <TextView
                android:id="@+id/planetTextDiameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextStyle.14.Black54"
                android:padding="@dimen/space_small"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_climate"
                android:textAppearance="@style/TextStyle.14.Black.Bold"
                android:padding="@dimen/space_small"/>

            <TextView
                android:id="@+id/planetTextViewClimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextStyle.14.Black54"
                android:padding="@dimen/space_small"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_gravity"
                android:textAppearance="@style/TextStyle.14.Black.Bold"
                android:padding="@dimen/space_small"/>

            <TextView
                android:id="@+id/planetTextViewGravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextStyle.14.Black54"
                android:padding="@dimen/space_small"/>

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_medium"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_region"
                    android:textAppearance="@style/TextStyle.14.Black.Bold"
                    android:padding="@dimen/space_small"/>

                <TextView
                    android:id="@+id/planetTextViewRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextStyle.14.Black54"
                    android:padding="@dimen/space_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_surface_water"
                    android:textAppearance="@style/TextStyle.14.Black.Bold"
                    android:padding="@dimen/space_small"/>

                <TextView
                    android:id="@+id/planetTextViewSurfaceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextStyle.14.Black54"
                    android:padding="@dimen/space_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_population"
                    android:textAppearance="@style/TextStyle.14.Black.Bold"
                    android:padding="@dimen/space_small"/>

                <TextView
                    android:id="@+id/planetTextViewPopulation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextStyle.14.Black54"
                    android:padding="@dimen/space_small"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>