<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="@dimen/space_medium"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/starwars_poster" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/space_default"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/moviesTextViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:textAppearance="@style/TextStyle.18.Black54.Bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_medium"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextStyle.14.Black"
                        android:text="@string/movies_director"/>

                    <TextView
                        android:id="@+id/moviesTextViewDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextStyle.14.Black.Bold"
                        android:paddingStart="@dimen/space_medium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_medium"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextStyle.14.Black54"
                        android:text="@string/movies_producer"/>

                    <TextView
                        android:id="@+id/moviesTextViewProducer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextStyle.14.Black54.Bold"
                        android:maxLines="2"
                        android:paddingStart="@dimen/space_medium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_medium"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextStyle.14.Black"
                        android:text="@string/movies_release_date"/>

                    <TextView
                        android:id="@+id/moviesTextViewReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextStyle.14.Black.Bold"
                        android:paddingStart="@dimen/space_medium"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_medium"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies_opening_crawl"
                android:textAppearance="@style/TextStyle.14.Black54.Bold"/>

            <TextView
                android:id="@+id/moviesTextViewOpeningCrawl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextStyle.14.Black"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>